fix: increase font size on mobile

--- a/packages/tailwind-config/theme.css
+++ b/packages/tailwind-config/theme.css
@@ -20,10 +20,6 @@
 }
 
 @layer base {
-  html {
-    font-size: 12px;
-  }
-
   html::-webkit-scrollbar-thumb {
     background-color: var(--color-secondary-300);
     border-radius: 2px;
@@ -37,10 +33,8 @@
     scrollbar-color: var(--color-secondary-300) transparent;
   }
 
-  @media screen and (min-width: 768px) {
-    html {
-      font-size: 14px;
-    }
+  html {
+    font-size: 14px;
   }
 
   @media screen and (min-width: 1024px) {
